# AUVPlanning

./: CMakeLists.txt  README.md
DinamicaMATLAB/: Controles.txt  benchmarkDebug3RRT.txt  controlSampler.asv  controlSampler.m  ode.m  ode4D.asv  ode4D.m  pruebaControles.txt  rungekutta_controlSampler.asv  rungekutta_controlSampler.m  rungekutta_dinamica.m
includes/benchmarks/: AUVPlanning.h  AUV_Torpedo_Benchmark4D.h  RealVectorStateSpacePropagateDistance.h  RealVectorStateSpaceSimplePropagateDistance.h
includes/colisionador/: AppBase.h  FCLContinuousMotionValidator.h  FCLMethodWrapper.h  FCLStateValidityChecker.h  GeometrySpecification.h  RigidBodyGeometry.h  appUtil.h
includes/planners/: AUVGoal.h  AUVGoalState.h  DynamicRRT.h  PathController.h  PlanificadorControl.h  SpaceInformation.h
includes/planners/PlanificadorLocal/: AUV2StepPIDControlSampler.h  AUVDirectedControlSampler.h  AUVPIDControlSampler.h  AUVSemiRandomDirectedControlSampler.h  PlanificadorLocal.h
includes/planners/PlanificadorLocal/MuestreadorControl/: MuestreadorControl.h  MuestreadorControlPID.h
includes/robots/: AUVRobot.h  AUV_Torpedo4D.h  torpedo.yaml
includes/robots/control/: AUV2StepPID.h  AUVPID.h  Controller.h
includes/robots/dynamics/: AUVdynamics.h  ODEAUVSolver.h
resources/: cilinder_AUV.dae  cilinder_AUV.skp  entorno.dae  entorno.skb  entorno.skp  entorno_columnas.dae  entorno_columnas.skp  entorno_columnas_x+90.dae  entorno_habitacion.dae  entorno_habitacion.skb  entorno_habitacion.skp  entorno_pasaje.dae  entorno_pasaje.skb  entorno_pasaje.skp  entorno_vacio.dae  entorno_vacio.skp  entorno_vacio_x+90.dae  model.dae  obs_hexagono_2m.skp  obs_hexagono_8m.skp  submarineScenary.world
resources/EntornosParaTests/: 0_test_obstaculo_simple.blend  0_test_obstaculo_simple.blend1  0_test_obstaculo_simple.dae  1_test_pasaje_estrecho.blend  1_test_pasaje_estrecho.blend1  1_test_pasaje_estrecho.dae  2_test_pared.blend  2_test_pared.blend1  2_test_pared.dae  3_test_zigzag.blend  3_test_zigzag.dae  4_test_pasajes.blend  4_test_pasajes.blend1  4_test_pasajes.dae  5_test_U.blend  5_test_U.blend1  5_test_U.dae  6_test_Z.blend  6_test_Z.blend1  6_test_Z.dae  cilindro_submarino.blend  cilindro_submarino.blend1  cilindro_submarino.dae  pared_lateral.blend  pared_lateral.dae  pareddoble_gruesa_lateral_con_agujeros.blend  pareddoble_gruesa_lateral_con_agujeros.dae  paredgruesa_lateral.blend  paredgruesa_lateral.dae  paredgruesa_lateral_con_agujeros.blend  paredgruesa_lateral_con_agujeros.blend1  paredgruesa_lateral_con_agujeros.dae  paredgruesa_lateralsolida.blend  paredgruesa_lateralsolida.blend1  paredgruesa_lateralsolida.dae
resources/freeCAD/: cilindro.dae  cilindro.fcstd  cilindro_0_1.dae  cilindro_0_1.fcstd  cilindro_176.dae  cilindro_176.fcstd  entornoVacio.dae  entornoVacio.fcstd  entornoVacioEscalado.dae  entornoVacio_0_1.dae  entornoVacio_0_1.fcstd  guille.dwg
src/benchmarks/: AUVPlanning.cpp  AUV_Torpedo_Benchmark4D.cpp  AUV_Torpedo_Dinamica.cpp  RealVectorStateSpacePropagateDistance.cpp  RealVectorStateSpaceSimplePropagateDistance.cpp
src/colisionador/: RigidBodyGeometry.cpp  appUtil.cpp  assimpUtil.cpp
src/planners/: AUVGoal.cpp  AUVGoalState.cpp  DynamicRRT.cpp  PathController.cpp  PlanificadorControl.cpp  SpaceInformation.cpp
src/planners/PlanificadorLocal/: AUV2StepPIDControlSampler.cpp  AUVDirectedControlSampler.cpp  AUVPIDControlSampler.cpp  AUVSemiRandomDirectedControlSampler.cpp  PlanificadorLocal.cpp
src/planners/PlanificadorLocal/MuestreadorControl/: MuestreadorControl.cpp  MuestreadorControlPID.cpp
src/robots/: AUVRobot.cpp  AUV_Torpedo4D.cpp
src/robots/control/: AUV2StepPID.cpp  AUVPID.cpp  Controller.cpp
src/robots/dynamics/: AUVdynamics.cpp
